# dbevo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
dbevo/core/: 000001__init_core_schema.sql  000004__create_projects_table.sql
dbevo/utils/: 000002__init_utils_schema.sql  000003__create_update_trigger_function.sql
examples/: .dbevo.toml  .editorconfig  .gitignore  README.md  pyproject.toml
examples/dbevo/schema/: 000000__init_dbevo_schema.sql
examples/dbevo/templates/: migration.sql.j2  sqlalchemy.py.j2
src/dbevo/: __init__.py
src/dbevo/cli/: __init__.py  main.py
src/dbevo/config/: __init__.py  settings.py
src/dbevo/core/: __init__.py  executor.py  generator.py  introspector.py  model_generator.py  parser.py
src/dbevo/models/: __init__.py
src/dbevo/templates/: pydantic.py.j2
