[project]
name = "moem-api"
version = "0.1.0"
description = "Moem Api server"
authors = [
    {name = "Semenets V. Pavel",email = "p.semenets@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4"
dependencies = [
    "dbevo (>=0.0.1,<0.0.2)",
    "actio (>=0.1.5,<0.2.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "asyncpg-listen (>=0.0.9,<0.0.10)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "betterlogging (>=1.0.0,<2.0.0)",
    "marshmallow (>=4.2.3,<5.0.0)",
    "websockets (>=16.0,<17.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-socketio (>=5.16.1,<6.0.0)",
    "werkzeug (>=3.1.7,<4.0.0)",
    "geoalchemy2 (>=0.18.4,<0.19.0)",
    "sse-starlette (>=3.3.4,<4.0.0)",
    "influxdb-client[asyncio] (>=1.50.0,<2.0.0)",
    "aiocsv (>=1.4.0,<2.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "geojson-pydantic (>=2.1.0,<3.0.0)",
    "aioftp (>=0.27.2,<0.28.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "fastapi-mail (>=1.6.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "zeep[async] (>=4.3.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
